--- a/movies/Views/Customer/Index.cshtml
+++ b/movies/Views/Customer/Index.cshtml
@@ -6,23 +6,29 @@
 }
 
 <h2>Customers</h2>
-
-<table class="table table-bordered table-hover table-responsive">
-    <thead>
-    <tr>
-        <th>
-            Customers
-        </th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var cust in Model)
-    {
+@if (!Model.Any())
+{
+    <p>Sorry no customers yet</p>
+}
+else
+{
+    <table class="table table-bordered table-hover table-responsive">
+        <thead>
         <tr>
-            <td>
-                @Html.ActionLink(cust.Name, "Details", "Customer", new {id = cust.Id}, null)
-            </td>
+            <th>
+                Customers
+            </th>
         </tr>
-    }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        @foreach (var cust in Model)
+        {
+            <tr>
+                <td>
+                    @Html.ActionLink(cust.Name, "Details", "Customer", new {id = cust.Id}, null)
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+}
