--- a/movies/Views/Movies/Index.cshtml
+++ b/movies/Views/Movies/Index.cshtml
@@ -1,1 +1,36 @@
-﻿
+﻿@model IEnumerable<movies.Models.Movie>
+
+@{
+
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<h2>Movies</h2>
+
+@if (!Model.Any())
+{
+    <p>Sorry we do not have any movies at this time</p>
+}
+else
+{
+    <table class="table table-bordered table-hover table-responsive">
+        <thead>
+        <tr>
+            <td>
+                Movies
+            </td>
+        </tr>
+        </thead>
+        <tbody>
+        @foreach (var movie in Model)
+        {
+            <tr>
+                <td>
+                    @movie.Name
+                </td>
+            </tr>
+        }
+        
+        </tbody>
+    </table>
+}
