adding birthdate and membership type displaying in the details of the customer

--- a/movies/Views/Customer/Index.cshtml
+++ b/movies/Views/Customer/Index.cshtml
@@ -18,6 +18,7 @@ else
             <th>
                 Customers
             </th>
+            <th>Discount Rate</th>
         </tr>
         </thead>
         <tbody>
@@ -26,6 +27,9 @@ else
             <tr>
                 <td>
                     @Html.ActionLink(cust.Name, "Details", "Customer", new {id = cust.Id}, null)
+                </td>
+                <td>
+                    @cust.MembershipType.Name
                 </td>
             </tr>
         }
