--- a/movies/Views/Customer/Details.cshtml
+++ b/movies/Views/Customer/Details.cshtml
@@ -1,7 +1,16 @@
-﻿@model movies.Models.Customer
+﻿@using movies.Models
+@model movies.Models.Customer
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@Model.Name</h2>
+
+<ul>
+    <li>@Model.MembershipType.Name</li>
+    @if (Model.BirthDate.HasValue)
+    {
+        <li>@Model.BirthDate.Value.ToShortDateString()</li>
+    }
+</ul>
