working with data and building forms before exercies in building form

--- a/movies/Views/Movies/Index.cshtml
+++ b/movies/Views/Movies/Index.cshtml
@@ -25,8 +25,14 @@ else
         @foreach (var movie in Model)
         {
             <tr>
-                <td>
+                @*<td>
                     @movie.Name
+                </td>*@
+                <td>
+                    @Html.ActionLink(movie.Name, "Details", "Movies", new {id = movie.Id},null)
+                </td>
+                <td>
+                    @movie.Genre.Name
                 </td>
             </tr>
         }
