--- a/movies/Views/Customer/Index.cshtml
+++ b/movies/Views/Customer/Index.cshtml
@@ -26,7 +26,7 @@ else
         {
             <tr>
                 <td>
-                    @Html.ActionLink(cust.Name, "Details", "Customer", new {id = cust.Id}, null)
+                    @Html.ActionLink(cust.Name, "Edit", "Customer", new {id = cust.Id}, null)
                 </td>
                 <td>
                     @cust.MembershipType.Name
